--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,29 @@ html, body {
     height: 100%;
 }
 
-#navbar_search_form_input{
+/*#navbar_search_form_input{
     width: 350px;
+}*/
+
+/*.fa-search {
+    color: aliceblue
+}*/
+
+.navbar {
+    background-color: #E6E6E6;
+}
+
+.nav-link{
+    color: #3A4145;
+    font-size: 16pt;
+}
+
+/*.btn-group {
+    position: absolute;
+    bottom: 0px;
+}*/
+
+.btn {
+    border: 1px solid black;
+    border-bottom: none;
 }
