--- a/css/styles.css
+++ b/css/styles.css
@@ -76,3 +76,13 @@
         font-size: .75rem !important;
     }
   }
+
+  @media screen and (max-width: 400px) {
+    .display-4{
+        font-size: 1.5rem !important;
+    }
+
+    .btn {
+        font-size: .5rem !important;
+    }
+  }
