--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@
     border-top: 5px solid orange;
 }
 
+.border_bottom_5 {
+    border-bottom: 5px solid orange;
+}
+
 .border_bottom_2{
     border-bottom: 2px solid orange;
 }
