--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@
   z-index: 7;*/
 }
 
+.display-4{
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
 #main_text > p {
     text-indent: 40px;
 }
@@ -45,20 +49,10 @@
     border: 2px solid white;
 }
 
-@media screen and (max-width: 600px) {
-    /*.display-4{
-        font-size: 2rem !important;
-    }*/
-  }
-
   @media screen and (max-width: 990px) {
     .h3, .h5 {
         font-size: 1.25rem !important;
     }
-
-    /*.display-4{
-        font-size: 2.5rem !important;
-    }*/
   }
 
   @media screen and (max-width: 765px) {
