--- a/css/styles.css
+++ b/css/styles.css
@@ -76,9 +76,9 @@
         font-size: .75rem !important;
     }
 
-    #catalog_btn {
+    /*.btn {
         font-size: .75rem !important;
-    }
+    }*/
   }
 
   @media screen and (max-width: 400px) {
@@ -86,7 +86,7 @@
         font-size: 1.5rem !important;
     }
 
-    .btn {
+    /*.btn {
         font-size: .5rem !important;
-    }
+    }*/
   }
