--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ html,body
 }
 
 .display-4{
-    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 }
 
 #main_text > p {
