--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ html,body
   z-index: 7;*/
 }
 
-.display-4{
+.black_text_shadow {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
